# bookstore-api

./: pyproject.toml  pytest.ini
bookstore/: settings.py  urls.py
order/: models.py  serializers.py  tests.py  views.py
order/migrations/: 0001_initial.py
product/: models.py  serializers.py  tests.py  views.py
product/migrations/: 0001_initial.py
