[tool.poetry]
name = "bookstore"
version = "0.1.0"
description = "API e-commerce de livros com Django REST Framework"
authors = ["William <wpeixototeixeira@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "^5.1"
djangorestframework = "^3.15.2"
pytest = "^8.3.2"
pytest-django = "^4.8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
